configure package for demo

--- a/demo/index.html
+++ b/demo/index.html
@@ -4,10 +4,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>vindicia-pmt-react - A React Wrapper for vindicia.js</title>
-  <script id="vindicia-js" src="pmt/vindicia.js" async></script>
+  <script id="vindicia-js" src="https://secure.vindicia.com/pmt/vindicia.js"></script>
 </head>
 <body>
   <div class="App"></div>
-  <script src="./index.js"></script>
+  <script src="./demo.js"></script>
 </body>
 </html>
