--- a/demo/index.html
+++ b/demo/index.html
@@ -4,6 +4,62 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>vindicia-pmt-react - A React Wrapper for vindicia.js</title>
+
+  <style type="text/css">
+    html, body {
+      margin: 0;
+      padding: 0;
+      font-family: 'Open Sans', sans-serif;
+    }
+    .header {
+      padding: 10px 20px;
+    }
+    .nav a:active, .nav a:visited {
+      color: #f49009;
+    }
+
+    .example h1 {
+      background-color: #3ca2a9;
+      color: #fff;
+      padding: 20px 0;
+      text-align: center;
+    }
+    .form-container, .description {
+      width: 600px;
+      margin: 0 auto;
+    }
+    .form-container {
+      border: 8px solid #3ca2a9;
+      padding: 20px;
+    }
+    code {
+      background-color: #f49009;
+      padding: 2px 4px;
+      color: #fff;
+    }
+    pre {
+      color: #f49009;
+      background-color: #f0f0f0;
+    }
+    .form--section {
+      margin-bottom: 20px;
+    }
+    .form--section__header {
+      font-size: 18px;
+      color: #f49009;
+      margin-bottom: 10px;
+    }
+    .form--field-group {
+      margin-left: 20px;
+    }
+    .form-note {
+      margin: 10px;
+      padding: 10px;
+      background-color: #f0f0f0;
+    }
+  </style>
+
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <script id="vindicia-js" src="https://secure.vindicia.com/pmt/vindicia.js"></script>
 </head>
 <body>
